--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "require": {
         "twig/twig": "^2.11",
         "altorouter/altorouter": "^1.2",
-        "vlucas/phpdotenv": "^3.6"
+        "vlucas/phpdotenv": "^3.6",
+        "philo/laravel-blade": "^3.1"
     },
     
     "autoload": {
@@ -10,7 +11,7 @@
             "App\\": "app/"
         },
 
-        "files": ["App/function/helper.php"]
+        "files": ["app/function/helper.php"]
     },
 
     "config": {
