--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "decision making app",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass resources/asset/sass/main.scss public/css/index.css -w"
+    "compile:sass": "node-sass resources/asset/sass/main.scss public/css/index.css -w",
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +23,16 @@
   },
   "homepage": "https://github.com/modernman00/idecide#readme",
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "cross-env": "^6.0.3",
+    "laravel-mix": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "webpack": "^4.41.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "fibers": "^4.0.2",
+    "sass": "^1.23.1"
+  }
 }
