--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/index2.js": "/js/index2.js",
-    "/css/index2.css": "/css/index2.css"
+    "/js/index.js": "/js/index.js",
+    "/css/index.css": "/css/index.css"
 }
