--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "webpack": "^4.41.2"
   },
   "dependencies": {
+    "bulma": "^0.8.0",
     "fibers": "^4.0.2",
+    "npm": "^6.12.0",
     "sass": "^1.23.1"
   }
 }
