--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
             "App\\": "app/"
         },
 
-        "files": ["app/function/helper.php"]
+        "files": ["app/function/helper.php", "app/function/helper2.php"]
     },
 
     "config": {
