--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "idecide",
   "version": "1.0.0",
   "description": "decision making app",
-  "main": "index.js",
+  "main": "index",
+  "typings": "index",
   "scripts": {
     "compile:sass": "node-sass resources/asset/sass/main.scss public/css/index.css -w",
     "dev": "npm run development",
@@ -34,7 +35,10 @@
   "dependencies": {
     "bulma": "^0.8.0",
     "fibers": "^4.0.2",
-    "npm": "^6.12.0",
-    "sass": "^1.23.1"
+    "gauge-chart": "^0.5.3",
+    "jquery": "^3.4.1",
+    "npm": "^6.13.4",
+    "sass": "^1.23.1",
+    "svg-gauge": "^1.0.6"
   }
 }
