--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/index.js": "/index.js",
-    "/index.css": "/index.css"
+    "/assets/js/index.js": "/assets/js/index.js",
+    "/assets/css/index.css": "/assets/css/index.css"
 }
